<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appBar"
        android:background="@color/colorWhite"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:navigationIcon="@drawable/ic_back_black"
        app:title="@string/title_settings"
        android:title="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_below="@id/appBar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/my_bookings_tv"
            android:padding="16dp"
            android:text="@string/title_my_bookings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlackLight"/>

        <LinearLayout
            android:id="@+id/admin_bookings_view"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="16dp"
                android:text="@string/title_admin_bookings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBlackLight"/>

        </LinearLayout>

        <TextView
            android:id="@+id/privacy_policy_tv"
            android:padding="16dp"
            android:text="@string/title_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlackLight"/>

        <TextView
            android:id="@+id/settings_about_us_tv"
            android:padding="16dp"
            android:text="@string/title_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlackLight"/>

        <TextView
            android:id="@+id/logout_tv"
            android:padding="16dp"
            android:text="@string/title_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlackLight"/>


    </LinearLayout>

    <TextView
        android:padding="16dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>